# openvmm

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: openvmm-ci.yaml  openvmm-docs-ci.yaml  openvmm-docs-pr.yaml  openvmm-pr-release.yaml  openvmm-pr.yaml
flowey/flowey_cli/src/pipeline_resolver/: direct_run.rs
flowey/flowey_lib_hvlite/src/_jobs/: cfg_versions.rs
openhcl/openvmm_hcl_resources/: Cargo.toml
openhcl/openvmm_hcl_resources/src/: lib.rs
openhcl/underhill_core/: Cargo.toml
openhcl/underhill_core/src/: lib.rs  worker.rs
openhcl/underhill_mem/: Cargo.toml
openhcl/underhill_mem/src/: init.rs  lib.rs  mapping.rs
openhcl/virt_mshv_vtl/src/: lib.rs
openvmm/openvmm_entry/: Cargo.toml
openvmm/openvmm_entry/src/: lib.rs
openvmm/openvmm_resources/: Cargo.toml
openvmm/openvmm_resources/src/: lib.rs
petri/: Cargo.toml
petri/src/vm/openvmm/: construct.rs  (+2 more)
support/mesh/mesh_node/: Cargo.toml
support/mesh/mesh_remote/: Cargo.toml
support/pal/pal_uring/: Cargo.toml
vm/hv1/hv1_emulator/: Cargo.toml
vmm_core/src/: vmotherboard_adapter.rs
vmm_core/src/partition_unit/: vp_set.rs
vmm_core/virt/src/: generic.rs  io.rs
vmm_core/virt_hvf/src/: hypercall.rs  lib.rs
vmm_core/virt_kvm/src/: lib.rs
vmm_core/virt_mshv/src/: lib.rs
vmm_core/virt_support_aarch64emu/src/: emulate.rs
vmm_core/virt_support_x86emu/src/: emulate.rs
vmm_core/virt_whp/src/: hypercalls.rs  lib.rs  memory.rs  vp.rs
workers/chipset_device_worker/: Cargo.toml
workers/chipset_device_worker/src/: lib.rs  proxy.rs  resolver.rs  worker.rs
xsync/: Cargo.toml
(+26 files in other folders)
