# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "chipset_device_worker"
edition.workspace = true
rust-version.workspace = true

[dependencies]
chipset_device.workspace = true
chipset_device_resources.workspace = true
vmcore.workspace = true
vm_resource.workspace = true

guest_emulation_transport.workspace = true
vmgs_broker.workspace = true

guestmem.workspace = true
inspect.workspace = true
mesh.workspace = true
mesh_worker.workspace = true
pal_async.workspace = true

anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
slab.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
